feat: CRUD /adventures/:id/packages
